:building_construction: remove setup.py and switch to pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,37 @@
 [build-system]
-requires = ["setuptools>=75.3.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "square_database_structure"
+version = "2.7.0"
+description = "database scheme for my personal server."
+readme = "README.md"
+readme-content-type = "text/markdown"
+requires-python = ">=3.12"
+license = { text = "GPLv3" }
+authors = [
+    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
+]
+urls = { homepage = "https://github.com/thepmsquare/square_database_structure" }
+keywords = ["database", "sqlalchemy", "utilities"]
+dependencies = [
+    "sqlalchemy>=2.0.23",
+    "psycopg2-binary>=2.9.9",
+]
+optional-dependencies = { all = ["pytest>=8.0.0"], test = ["pytest>=8.0.0"] }
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Database",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["square_database_structure"]
+include = ["square_database_structure/**/stored_procedures_and_functions/*.sql"]
